--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
         <nav class="container mx-auto px-6 py-4">
             <a href="/" class="text-2xl font-bold text-red-600">THE LOAN PHONE</a>
             <div class="mt-4">
-                <a href="/blog/" class="text-blue-600 hover:underline">Blog</a>
+                <a href="blog/" class="text-blue-600 hover:underline">Blog</a>
             </div>
         </nav>
     </header>
