--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     <main class="container mx-auto px-6 py-8">
         <h1 class="text-4xl font-bold mb-4">Compare Loans Fast</h1>
         <p class="text-lg text-gray-600 mb-8">Test homepage for loan comparison site.</p>
-        <a href="/blog/" class="bg-red-600 text-white px-6 py-3 rounded">View Blog</a>
+        <a href="blog/" class="bg-red-600 text-white px-6 py-3 rounded">View Blog</a>
     </main>
 </body>
 </html>
