--- a/index.html
+++ b/index.html
@@ -1,25 +1,10 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>The Loan Phone - Test</title>
-    <script src="https://cdn.tailwindcss.com"></script>
-</head>
-<body class="bg-white">
-    <header class="bg-white shadow-sm">
-        <nav class="container mx-auto px-6 py-4">
-            <a href="/" class="text-2xl font-bold text-red-600">THE LOAN PHONE</a>
-            <div class="mt-4">
-                <a href="blog/" class="text-blue-600 hover:underline">Blog</a>
-            </div>
-        </nav>
-    </header>
-    
-    <main class="container mx-auto px-6 py-8">
-        <h1 class="text-4xl font-bold mb-4">Compare Loans Fast</h1>
-        <p class="text-lg text-gray-600 mb-8">Test homepage for loan comparison site.</p>
-        <a href="blog/" class="bg-red-600 text-white px-6 py-3 rounded">View Blog</a>
-    </main>
-</body>
-</html>
+---
+layout: default
+title: "The Loan Phone Home"
+---
+
+# Welcome to The Loan Phone Blog
+
+Find Australia’s best finance tips, guides, and news updated regularly.
+
+[Read our blog]({{ '/blog/' | relative_url }}).
